# gaming-commerce-lakehouse

./: MANIFEST.md  Makefile  README.md  pyproject.toml
conf/: base.yaml  datasets.yaml
conf/cloud/: azure.yaml  gcp.yaml
conf/env/: dev.yaml  prod.yaml  qa.yaml
databricks/: databricks.yml
databricks/resources/: clusters.yml  jobs.yml  streaming.yml
docker/: Dockerfile.api  Dockerfile.gpu  Dockerfile.jobs
docs/: ARCHITECTURE.md  DATASETS.md  DATA_MODEL.md  OPTIMIZATIONS.md  RUNBOOK.md
docs/adr/: 0001-two-variable-configuration-model.md  0002-medallion-plus-event-driven-on-delta.md  0003-debezium-for-realtime-airbyte-for-batch-cdc.md  0004-two-streaming-engines-beam-and-structured-streaming.md  0005-liquid-clustering-over-zorder.md  0006-terraform-for-infra-bundles-for-workloads.md  0007-scd2-in-silver-via-merge.md  0008-mlflow-champion-challenger-promotion.md  0009-provider-agnostic-genai-layer.md  0010-keyless-federated-identity.md  README.md  template.md
infra/terraform/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/envs/dev/: backend.azure.hcl  backend.gcp.hcl  terraform.tfvars
infra/terraform/envs/prod/: backend.azure.hcl  backend.gcp.hcl  terraform.tfvars
infra/terraform/envs/qa/: backend.azure.hcl  backend.gcp.hcl  terraform.tfvars
infra/terraform/modules/azure/: main.tf  outputs.tf  variables.tf
jenkins/: Jenkinsfile
jenkins/vars/: gcCloudLogin.groovy  gcDatabricksBundleDeploy.groovy  gcNotify.groovy  gcSyncOrchestration.groovy  gcTerraformApply.groovy
orchestration/airbyte/: apply_config.py
orchestration/airflow/dags/: dag_batch_medallion.py  dag_ml_training.py  dag_streaming_ops.py
orchestration/airflow/plugins/: callbacks.py
orchestration/beam/: run_beam.sh
requirements/: base.txt  dev.txt  gpu.txt
scripts/: bootstrap_local.sh  seed_oltp.sql
src/gaming_lakehouse/: __init__.py  config.py  logging_utils.py  secrets.py  spark.py  storage.py
src/gaming_lakehouse/cdc/: cdc_merge_silver.py
src/gaming_lakehouse/delivery/: publish_marts.py  serving_api.py
src/gaming_lakehouse/genai/: catalog_insights.py  llm_provider.py
src/gaming_lakehouse/ingestion/: kaggle_client.py  reference_dims.py  run_ingest.py
src/gaming_lakehouse/ml/: features.py  registry.py  train_tf_forecast.py  train_torch_recsys.py
src/gaming_lakehouse/streaming/: beam_enrichment.py  bronze_stream.py  event_schemas.py  producer_simulator.py
src/gaming_lakehouse/transform/: bronze_to_silver.py  optimize_maintenance.py  silver_to_gold.py
tests/: conftest.py
tests/integration/: test_cdc_e2e.py  test_smoke.py
tests/unit/: test_cdc_merge.py  test_config.py  test_expectations.py  test_reference_dims.py  test_transforms.py
(+10 files in other folders)
